syntax = "proto3";

option csharp_namespace = "VErp.Grpc.Protos.Enums";

package Enums;

enum EnumBarcodeStandard {
	FreeStyle = 0;
    EAN_8 = 1;
    EAN_13 = 2;
}

enum EnumTimeType {
    ENUM_TIME_TYPE_UNKNOW = 0;
    Year = 1;
    Month = 2;
    Week = 3;
    Day = 4;
    Hour = 5;
    Minute = 6;
}

enum EnumStockOutputRule {
    None = 0;
    Fifo = 1;
    Lifo = 2;
}